# Copyright (C) 2007 Vincent Rogier <vince_rogier@yahoo.fr>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

ACLOCAL_AMFLAGS = -I m4
DISTCLEANFILES = *~ \#*\#
lib_LIBRARIES = libcmutils.so \
	libcmutils.a
libcmutils_so_SOURCES = \
arrays.c base.c callstack.c concurrent.c config.c lists.c logger.c maps.c \
memdebug.c nanojson.c nanoxml.c network.c pattern.c pool.c strings.c
libcmutils_a_SOURCES = \
arrays.c base.c callstack.c concurrent.c config.c lists.c logger.c maps.c \
memdebug.c nanojson.c nanoxml.c network.c pattern.c pool.c strings.c

