

include_directories(../src)
link_libraries(cmutils)

function(add_test_target)
    add_executable(${ARGV} ${ARGV}.c)
    add_test(NAME ${ARGV} COMMAND ${ARGV})
    IF ( ${CMAKE_SYSTEM_NAME} STREQUAL "Windows" )
        set_tests_properties( ${ARGV} PROPERTIES ENVIRONMENT_MODIFICATION PATH=path_list_append:${LIB_PATH} )
        MESSAGE( "path append for ${ARGV} - ${LIB_PATH}" )
    ENDIF ()
endfunction()

add_test_target(array_test)
add_test_target(concurrent_test)
add_test_target(config_test)
add_test_target(dgram_test)
add_test_target(string_test)
add_test_target(log_test)
add_test_target(network_test)
add_test_target(json_test)
add_test_target(map_test)
add_test_target(timer_test)
add_test_target(xml_test)
add_test_target(pool_test)
